test/negative/t35.mli.expected

*******************************
********** Parsed file ********
*******************************
type t = {
  x: int }
[@@@gospel {| function f (x: t): int =
    match x with
    | {x;z} -> x |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t = {
x: int }
  

(*@ function f ... *)
File "t35.mli", line 15, characters 9-10:
Error: Symbol z not found.
